force-app/main/default/objects/UC_Details__c/UC_Details__c.object-meta.xml
<CustomObject>
    <label>UC Detail</label>
    <nameField>
        <displayFormat>UC-{00000}</displayFormat>
        <label>UC Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>