force-app/main/default/objects/UC_Details__c/fields/Are_you_using_a_SD_Wan_solution__c.field-meta.xml
<CustomField>
    <fullName>Are_you_using_a_SD_Wan_solution__c</fullName>
    <label>Are you using a Voice SD-Wan solution?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>