force-app/main/default/objects/UC_Details__c/fields/Current_Data_Network_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Data_Network_Provider__c</fullName>
    <label>Current Data Network Provider</label>
    <length>200</length>
    <type>Text</type>
</CustomField>