force-app/main/default/objects/UC_Details__c/fields/Current_Long_Distance_Contract__c.field-meta.xml
<CustomField>
    <fullName>Current_Long_Distance_Contract__c</fullName>
    <label>Current Long Distance Contract End Date</label>
    <type>Date</type>
</CustomField>