force-app/main/default/objects/UC_Details__c/fields/Current_Long_Distance_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Long_Distance_Contract_Status__c</fullName>
    <label>Current Long Distance Contract Status?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Contract</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes but end date unknown</fullName>
            </value>
            <value>
                <fullName>Yes under contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>