force-app/main/default/objects/UC_Details__c/fields/Current_Long_Distance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Long_Distance_Provider__c</fullName>
    <label>Current Long Distance Provider</label>
    <length>200</length>
    <type>Text</type>
</CustomField>