force-app/main/default/objects/UC_Details__c/fields/Current_Phone_System_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone_System_Contract_End_Date__c</fullName>
    <label>Current Phone System Contract End Date</label>
    <type>Date</type>
</CustomField>