force-app/main/default/objects/UC_Details__c/fields/Current_Phone_System_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone_System_Provider__c</fullName>
    <label>Current Phone System Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Bezeq</fullName>
            </value>
            <value>
                <fullName>Broadsoft</fullName>
            </value>
            <value>
                <fullName>BT British Telecom</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Deutsche Telekom</fullName>
            </value>
            <value>
                <fullName>Elisa</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Fuze</fullName>
            </value>
            <value>
                <fullName>Gamma</fullName>
            </value>
            <value>
                <fullName>Jive</fullName>
            </value>
            <value>
                <fullName>Kazakhtelecom</fullName>
            </value>
            <value>
                <fullName>KPN</fullName>
            </value>
            <value>
                <fullName>Mitel / ShoreTel</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Nextiva</fullName>
            </value>
            <value>
                <fullName>NFON</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panasonic</fullName>
            </value>
            <value>
                <fullName>RingCentral</fullName>
            </value>
            <value>
                <fullName>SFR</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Swisscom</fullName>
            </value>
            <value>
                <fullName>TDC</fullName>
            </value>
            <value>
                <fullName>Telefonica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>