force-app/main/default/objects/UC_Details__c/fields/Current_Video_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Video_Provider__c</fullName>
    <label>Current Video Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAPT</fullName>
            </value>
            <value>
                <fullName>Acano</fullName>
            </value>
            <value>
                <fullName>Accutel</fullName>
            </value>
            <value>
                <fullName>ACT Teleconferencing</fullName>
            </value>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>Aethra.net</fullName>
            </value>
            <value>
                <fullName>Allstream</fullName>
            </value>
            <value>
                <fullName>ArkadinAnyWhere</fullName>
            </value>
            <value>
                <fullName>Arkadin Audio</fullName>
            </value>
            <value>
                <fullName>Arkadin Audio Event</fullName>
            </value>
            <value>
                <fullName>Arkadin Connect</fullName>
            </value>
            <value>
                <fullName>Arkadin Video</fullName>
            </value>
            <value>
                <fullName>Arkadin Webcast</fullName>
            </value>
            <value>
                <fullName>Arkadin Web Event</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Connect</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Connect Web Conferencing</fullName>
            </value>
            <value>
                <fullName>AT Conferencing</fullName>
            </value>
            <value>
                <fullName>Automated Conferencing</fullName>
            </value>
            <value>
                <fullName>Avanade</fullName>
            </value>
            <value>
                <fullName>AVI-SPL</fullName>
            </value>
            <value>
                <fullName>Avistar</fullName>
            </value>
            <value>
                <fullName>Basecamp</fullName>
            </value>
            <value>
                <fullName>Bell Conferencing</fullName>
            </value>
            <value>
                <fullName>Bluejeans</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>BT: WireOne</fullName>
            </value>
            <value>
                <fullName>BudgetConference</fullName>
            </value>
            <value>
                <fullName>Canon Soft</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>