force-app/main/default/objects/UC_Details__c/fields/If_PBX_is_on_premise_who_manages_it__c.field-meta.xml
<CustomField>
    <fullName>If_PBX_is_on_premise_who_manages_it__c</fullName>
    <label>If PBX is on-premise, who manages it?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal IT</fullName>
            </value>
            <value>
                <fullName>Third Party Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>