force-app/main/default/objects/UC_Details__c/fields/If_Yes_please_explain__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_please_explain__c</fullName>
    <label>If Yes, please explain:</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>