force-app/main/default/objects/UC_Details__c/fields/If_Yes_when_will_it_happen__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_when_will_it_happen__c</fullName>
    <label>If Yes, when will it happen:</label>
    <type>Date</type>
</CustomField>