force-app/main/default/objects/UC_Details__c/fields/Open_to_further_conversations_with_PGi__c.field-meta.xml
<CustomField>
    <fullName>Open_to_further_conversations_with_PGi__c</fullName>
    <label>Open to further conversations with PGi?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>