force-app/main/default/objects/UC_Details__c/fields/Pain_points_with_current_solution_s__c.field-meta.xml
<CustomField>
    <fullName>Pain_points_with_current_solution_s__c</fullName>
    <label>Any pain points with current solutions?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>